@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2025, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package com.hazelcast.aws;
 import org.junit.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -29,24 +28,25 @@ public class XmlNodeTest {
     public void parse() {
         // given
         //language=XML
-        String xml = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
-                + "<root xmlns=\"http://ec2.amazonaws.com/doc/2016-11-15/\">\n"
-                + "    <parent>\n"
-                + "        <item>\n"
-                + "            <key>value</key>\n"
-                + "        </item>\n"
-                + "        <item>\n"
-                + "            <key>second-value</key>\n"
-                + "        </item>\n"
-                + "    </parent>\n"
-                + "</root>";
+        String xml = """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <root xmlns="http://ec2.amazonaws.com/doc/2016-11-15/">
+                    <parent>
+                        <item>
+                            <key>value</key>
+                        </item>
+                        <item>
+                            <key>second-value</key>
+                        </item>
+                    </parent>
+                </root>""";
 
         // when
         List<String> itemValues = XmlNode.create(xml)
                                          .getSubNodes("parent").stream()
                                          .flatMap(e -> e.getSubNodes("item").stream())
                                          .map(item -> item.getValue("key"))
-                                         .collect(Collectors.toList());
+                                         .toList();
 
         // then
         assertThat(itemValues).containsExactlyInAnyOrder("value", "second-value");
