@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2025, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
@@ -61,7 +60,7 @@ public class ProxySplitBrainTest extends SplitBrainTestSupport {
         assertTrueEventually(() -> {
             Collection<DistributedObject> distributedObjects = hz.getDistributedObjects().stream()
                     .filter(o -> !o.getName().startsWith(JobRepository.INTERNAL_JET_OBJECTS_PREFIX))
-                    .collect(Collectors.toList());
+                    .toList();
             int actualSize = distributedObjects.size();
             assertEquals(expectedCount, actualSize);
         });
